--- a/practica_2/ejercicio_2_css.html
+++ b/practica_2/ejercicio_2_css.html
@@ -1,3 +1,4 @@
+<!--Ivan Biscaldi-->
 <style>
 p#normal {                      /*Afectara al elemento p de id='normal' */
 font-family: arial,helvetica;   /*La fuente del texto sera arial si esta disponible, o helvetica, y si tampoco esta disponible*/
