--- a/practica_2/ejercicio_3_css.html
+++ b/practica_2/ejercicio_3_css.html
@@ -1,3 +1,4 @@
+<!--Ivan Biscaldi-->
 <style>
 p.quitar {          /*Afecta a los elementos p de clase='quitar'*/
 color: red;       /*El color del texto del elemento sera rojo*/
